Some vm optimizations. TODO: create a run for hotspot and another for jrockit